# grok-to-stl

./: .gitignore  .pre-commit-config.yaml  AI.md  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  lint.yml  python-test.yml  release.yml  security.yml
docs/: getting_started.md  project_structure.md
examples/basic/: cube.scad
src/grok_openscad/: __init__.py  cli.py  generator.py
templates/: basic_object.scad
tests/: test_generator.py
